--- a/.i3/config
+++ b/.i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
@@ -31,7 +31,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'Meslo LG S DZ for Powerline-10' -h 24
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -91,7 +91,7 @@ bindsym $mod+a focus parent
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
+bindsym $mod+4 workspace graphic
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
@@ -147,8 +147,17 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+  status_command python /root/.i3/status.py
 	position top
+  colors {
+    separator #93a1a1
+    background #002b36
+    statusline #93a1a1
+    focused_workspace #eee8d5 #859900 #eee8d5
+    active_workspace #fdf6e3 #6c71c4 #fdf6e3
+    inactive_workspace #073642 #eee8d5 #002b36
+    urgent_workspace #d33682 #d33682 #fdf6e3
+  }
 }
 
 hide_edge_borders both
@@ -160,3 +169,16 @@ workspace_auto_back_and_forth yes
 for_window [title="Twitter - Vimperator"] move right; resize shrink left 30 px or 30 ppt;
 
 for_window [class="URxvt"] border 1pixel
+for_window [class="Dwb"] border 1pixel
+
+# start a firefox
+bindsym $mod+Shift+Return exec firefox
+
+# assign graphic app to dedicated workspace
+assign [class="pinta"] graphic
+assign [class="Inkscape"] graphic
+
+client.focused #859900 #859900 #eee8d5 #859900
+client.focused_inactive #073642 #073642 #586e75 #6c71c4
+client.unfocused #073642 #073642 #93a1a1 #586e75
+client.urgent #d33682 #d33682 #fdf6e3 #dc322f
