--- a/.i3/config
+++ b/.i3/config
@@ -147,7 +147,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command python /root/.i3/status.py
+  status_command python ~/.i3/status.py
 	position top
   colors {
     separator #93a1a1
