--- a/.i3/config
+++ b/.i3/config
@@ -162,6 +162,13 @@ bar {
 
 hide_edge_borders both
 
+#floating window
+bindsym $mod+t floating toggle
+
+#scratchpad
+bindsym $mod+m move scratchpad
+bindsym $mod+o scratchpad show
+
 #automatic back-and-forth switch workspace
 workspace_auto_back_and_forth yes
 
