--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,10 +56,14 @@ bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+#bindsym $mod+Shift+Left move left
+#bindsym $mod+Shift+Down move down
+#bindsym $mod+Shift+Up move up
+#bindsym $mod+Shift+Right move right
+
+# cycle throw workspace
+bindsym $mod+Shift+Left workspace prev
+bindsym $mod+Shift+Right workspace next
 
 # split in horizontal orientation
 bindsym $mod+Shift+v split h
