--- a/.config/i3/config
+++ b/.config/i3/config
@@ -104,10 +104,10 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+1 move container to workspace console
+bindsym $mod+Shift+2 move container to workspace web
+bindsym $mod+Shift+3 move container to workspace gvim
+bindsym $mod+Shift+4 move container to workspace graphic
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
@@ -189,8 +189,8 @@ bindsym $mod+Shift+Return exec firefox
 # assign graphic app to dedicated workspace
 assign [class="(pinta|Inkscpae)"] graphic
 for_window [class="(pinta|Inkscape)"] focus
-assign [class="Dwb"] web
-for_window [class="Dwb"] focus
+#assign [class="Dwb"] web
+#for_window [class="Dwb"] focus
 assign [class="Gvim"] gvim
 for_window [class="Gvim"] focus
 assign [class="Urxvt"] console
