--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -1,5 +1,10 @@
 set hintkeys=sdfghjkl
+set input-fg-normal=#839496
+set input-bg-normal=#002b36
+set status-ssl-color-fg=#002b36
+set status-ssl-color-bg=#839496
+set status-color-fg=#586e75
+set status-color-bg=#eee8d5
 nn d :q<CR>
-cn gh :o http://www.github.com<CR>
 nmap H <C-O>
 nmap L <C-I>
