--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,6 +11,9 @@
 
 set $mod Mod4
 
+# layout mode for new container
+# workspace_layout default
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -91,10 +94,12 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+#bindsym $mod+1 workspace console; layout default; exec [ $(ps h -C urxvt | wc -l) = 0 ] && /usr/bin/urxvt;
+#bindsym $mod+3 workspace gvim; layout default; exec [ $(ps h -C vim | wc -l) = 0 ] && /usr/bin/urxvt -e vim
 # switch to workspace
-bindsym $mod+1 workspace console
+bindsym $mod+1 workspace console; layout toggle split; exec i3-sensible-terminal
 bindsym $mod+2 workspace web; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb
-bindsym $mod+3 workspace gvim
+bindsym $mod+3 workspace gvim; layout toggle split; exec --no-startup-id [ $(ps -eo command | grep -c "[u]rxvt -e vim") = 0 ] && /usr/bin/urxvt -e vim
 bindsym $mod+4 workspace graphic
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -151,6 +156,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+  font pango:Meslo LG S DZ for Powerline, icons, FontAwesome, 10
   status_command python ~/.config/i3/status.py
 	position top
   colors {
@@ -177,7 +183,7 @@ bindsym $mod+o scratchpad show
 workspace_auto_back_and_forth yes
 
 #twitter
-for_window [title="Twitter - Vimperator"] move right; resize shrink left 30 px or 30 ppt;
+for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
 
 for_window [class="URxvt"] border 1pixel
 for_window [class="Dwb"] border 1pixel
