--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,7 +7,7 @@
 
 # i3 config file (v4)
 #
-# Please see http://i3wm.org/docs/userguide.html for a complete referenceG
+# Please see http://i3wm.org/docs/userguide.html for a complete reference
 
 set $mod Mod4
 
