--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,9 +7,12 @@
 
 # i3 config file (v4)
 #
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
+# Please see http://i3wm.org/docs/userguide.html for a complete reference
 
 set $mod Mod4
+
+# layout mode for new container
+# workspace_layout default
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -92,9 +95,9 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace console
+bindsym $mod+1 workspace console; layout splitv; exec [ $( ps -eo cmd | grep -c '[u]rxvt -name console' ) -eq 2 ] && urxvt -name console
 bindsym $mod+2 workspace web; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb
-bindsym $mod+3 workspace gvim
+bindsym $mod+3 workspace vim; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -name uvim -e vim' ) -eq 2 ] && urxvt -name uvim -e vim
 bindsym $mod+4 workspace graphic
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -151,6 +154,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+  font pango:Meslo LG S DZ for Powerline, icons, FontAwesome, 10
   status_command python ~/.config/i3/status.py
 	position top
   colors {
@@ -177,22 +181,23 @@ bindsym $mod+o scratchpad show
 workspace_auto_back_and_forth yes
 
 #twitter
-for_window [title="Twitter - Vimperator"] move right; resize shrink left 30 px or 30 ppt;
+for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
 
 for_window [class="URxvt"] border 1pixel
 for_window [class="Dwb"] border 1pixel
+for_window [class="Vimb"] border 1pixel
 for_window [class="Gvim"] border 1pixel
 
 # start a firefox
-bindsym $mod+Shift+Return exec firefox
+bindsym $mod+Shift+Return exec Vimb
 
 # assign graphic app to dedicated workspace
 assign [class="(pinta|Inkscpae)"] graphic
 for_window [class="(pinta|Inkscape)"] focus
-#assign [class="Dwb"] web
-#for_window [class="Dwb"] focus
-assign [class="Gvim"] gvim
-for_window [class="Gvim"] focus
+assign [class="Dwb"] web
+for_window [class="Dwb"] focus
+assign [class="Vimb"] web
+for_window [class="Vimb"] focus
 assign [class="Urxvt"] console
 for_window [class="Urxvt"] focus
 
@@ -200,6 +205,4 @@ client.focused #859900 #859900 #eee8d5 #859900
 client.focused_inactive #073642 #073642 #586e75 #6c71c4
 client.unfocused #073642 #073642 #93a1a1 #586e75
 client.urgent #d33682 #d33682 #fdf6e3 #dc322f
-
-
 
