--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,6 +10,7 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference
 
 set $mod Mod4
+set $tabKey Mode_switch
 
 # layout mode for new container
 # workspace_layout default
@@ -28,7 +29,7 @@ font pango:Meslo LG S DZ for Powerline 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return split horizontal; exec i3-sensible-terminal;
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -95,9 +96,9 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace console; layout splitv; exec [ $( ps -eo cmd | grep -c '[u]rxvt -name console' ) -eq 2 ] && urxvt -name console
+bindsym $mod+1 workspace console; layout splith; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
 bindsym $mod+2 workspace web; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb
-bindsym $mod+3 workspace vim; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -name uvim -e vim' ) -eq 2 ] && urxvt -name uvim -e vim
+bindsym $mod+3 workspace vim; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title uvim -e vim' ) -eq 2 ] && urxvt -title uvim -e vim
 bindsym $mod+4 workspace graphic
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -182,7 +183,9 @@ workspace_auto_back_and_forth yes
 
 #twitter
 for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
+for_window [title="david_adsnovo - Skype*"] focus; move right; resize shrink left 20 px or 20 ppt; layout stacking;
 
+for_window [class="uvim"] border 1pixel
 for_window [class="URxvt"] border 1pixel
 for_window [class="Dwb"] border 1pixel
 for_window [class="Vimb"] border 1pixel
@@ -197,12 +200,19 @@ for_window [class="(pinta|Inkscape)"] focus
 assign [class="Dwb"] web
 for_window [class="Dwb"] focus
 assign [class="Vimb"] web
-for_window [class="Vimb"] focus
+for_window [class="Vimb"] layout tabbed; focus
 assign [class="Urxvt"] console
-for_window [class="Urxvt"] focus
+for_window [class="Urxvt"] layout splith; focus
+for_window [title="vimwiki_scratchpad"] move scratchpad; scratchpad show
 
 client.focused #859900 #859900 #eee8d5 #859900
 client.focused_inactive #073642 #073642 #586e75 #6c71c4
 client.unfocused #073642 #073642 #93a1a1 #586e75
 client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 
+# Enable/disable logging
+bindsym $mod+x shmlog toggle
+
+bindsym $tabKey+w exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimwiki_scratchpad -e vim -c VimwikiDiaryIndex' ) -eq 2 ] && urxvt -title vimwiki_scratchpad -e vim -c VimwikiDiaryIndex;
+exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
+#focus; move scratchpad; scratchpad show
