--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -1,4 +1,5 @@
 set hintkeys=sdfghjkl
+set caret=true
 set input-fg-normal=#839496
 set input-bg-normal=#002b36
 set status-ssl-color-fg=#002b36
@@ -10,3 +11,5 @@ nmap H <C-O>
 nmap L <C-I>
 shortcut-add G=https://duckduckgo.com/html/?q=!gifl%20$0
 shortcut-add g=https://encrypted.google.com/#q=$0
+
+nmap ,,i :e instapaper()<CR>
