--- a/.config/i3/config
+++ b/.config/i3/config
@@ -99,9 +99,9 @@ bindsym $mod+a focus parent
 bindsym $mod+1 workspace console; layout splith; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
 bindsym $mod+2 workspace web; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb
 bindsym $mod+3 workspace vim; layout splith; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title uvim -e vim' ) -eq 2 ] && urxvt -title uvim -e vim
-bindsym $mod+4 workspace graphic
+bindsym $mod+4 workspace mail-Perso; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttperso -e mutt' ) -eq 2 ] && urxvt -title muttperso -e mutt -e "source ~/.mutt/gmail.com"
 bindsym $mod+5 workspace mail-JIT; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttjit -e mutt' ) -eq 2 ] && urxvt -title muttjit -e mutt -e "source ~/.mutt/jobintree.com"
-bindsym $mod+6 workspace mail-Perso; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttperso -e mutt' ) -eq 2 ] && urxvt -title muttperso -e mutt -e "source ~/.mutt/gmail.com"
+bindsym $mod+6 workspace tmux-weechat; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
@@ -111,9 +111,9 @@ bindsym $mod+0 workspace 10
 bindsym $mod+Shift+1 move container to workspace console
 bindsym $mod+Shift+2 move container to workspace web
 bindsym $mod+Shift+3 move container to workspace vim
-bindsym $mod+Shift+4 move container to workspace graphic
+bindsym $mod+Shift+4 move container to workspace mail-Perso
 bindsym $mod+Shift+5 move container to workspace mail-JIT
-bindsym $mod+Shift+6 move container to workspace mail-Perso
+bindsym $mod+Shift+6 move container to workspace tmux-weechat
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
@@ -204,6 +204,7 @@ for_window [class="Dwb"] focus
 #assign [class="Urxvt"] console
 #for_window [class="Urxvt"] layout splith; focus
 for_window [title="vimwiki_scratchpad"] move scratchpad; scratchpad show
+for_window [title="vimdiary_scratchpad"] move scratchpad; scratchpad show
 for_window [title="vimb_scratchpad"] move scratchpad; scratchpad show
 
 client.focused #859900 #859900 #eee8d5 #859900
@@ -214,8 +215,8 @@ client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 # Enable/disable logging
 bindsym $mod+x shmlog toggle
 
-bindsym $tabKey+w exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex' ) -eq 2 ] && urxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex;
-bindsym $tabKey+i exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimwiki_scratchpad -e vim -c VimwikiDiaryIndex' ) -eq 2 ] && urxvt -title vimwiki_scratchpad -e vim -c VimwikiDiaryIndex;
-bindsym $tabKey+v exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimb_scratchpad -e vim ~/.config/vimb/config' ) -eq 2 ] && urxvt -title vimb_scratchpad -e vim ~/.config/vimb/config;
+bindsym $tabKey+w exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex' ) -eq 2 ] && urxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex || i3-msg scratchpad show;
+bindsym $tabKey+i exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimdiary_scratchpad -e vim -c VimwikiDiaryIndex' ) -eq 2 ] && urxvt -title vimdiary_scratchpad -e vim -c VimwikiDiaryIndex || i3-msg scratchpad show;
+bindsym $tabKey+v exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimb_scratchpad -e vim ~/.config/vimb/config' ) -eq 2 ] && urxvt -title vimb_scratchpad -e vim ~/.config/vimb/config || i3-msg scratchpad show;
 exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
 #focus; move scratchpad; scratchpad show
