update change from macbook

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,6 +10,7 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference
 
 set $mod Mod4
+set $tabKey Mode_switch
 
 # layout mode for new container
 # workspace_layout default
@@ -28,7 +29,7 @@ font pango:Meslo LG S DZ for Powerline 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec i3-sensible-terminal;
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -95,24 +96,24 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace console; layout splitv; exec [ $( ps -eo cmd | grep -c '[u]rxvt -name console' ) -eq 2 ] && urxvt -name console
-bindsym $mod+2 workspace web; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb
-bindsym $mod+3 workspace vim; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -name uvim -e vim' ) -eq 2 ] && urxvt -name uvim -e vim
-bindsym $mod+4 workspace graphic
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
+bindsym $mod+1 workspace 1:console; layout splith; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
+bindsym $mod+2 workspace 2:web; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb
+bindsym $mod+3 workspace 3:vim; layout splith; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title uvim -e vim' ) -eq 2 ] && urxvt -title uvim -e vim
+bindsym $mod+4 workspace 4:mail-Perso; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttperso -e mutt' ) -eq 2 ] && urxvt -title muttperso -e mutt -e "source ~/.mutt/gmail.com"
+bindsym $mod+5 workspace 5:mail-JIT; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttjit -e mutt' ) -eq 2 ] && urxvt -title muttjit -e mutt -e "source ~/.mutt/jobintree.com"
+bindsym $mod+6 workspace 6:tmux-weechat; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace console
-bindsym $mod+Shift+2 move container to workspace web
-bindsym $mod+Shift+3 move container to workspace gvim
-bindsym $mod+Shift+4 move container to workspace graphic
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+1 move container to workspace 1:console
+bindsym $mod+Shift+2 move container to workspace 2:web
+bindsym $mod+Shift+3 move container to workspace 3:vim
+bindsym $mod+Shift+4 move container to workspace 4:mail-Perso
+bindsym $mod+Shift+5 move container to workspace 5:mail-JIT
+bindsym $mod+Shift+6 move container to workspace 6:tmux-weechat
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
@@ -166,6 +167,7 @@ bar {
     inactive_workspace #073642 #eee8d5 #002b36
     urgent_workspace #d33682 #d33682 #fdf6e3
   }
+  strip_workspace_numbers yes 
 }
 
 hide_edge_borders both
@@ -182,27 +184,38 @@ workspace_auto_back_and_forth yes
 
 #twitter
 for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
+for_window [title="david_adsnovo - Skype*"] focus; move right; resize shrink left 20 px or 20 ppt; layout stacking;
 
+for_window [class="uvim"] border 1pixel
 for_window [class="URxvt"] border 1pixel
-for_window [class="Dwb"] border 1pixel
 for_window [class="Vimb"] border 1pixel
+#for_window [class="Vimb"] border 1pixel
 for_window [class="Gvim"] border 1pixel
 
 # start a firefox
-bindsym $mod+Shift+Return exec Vimb
+bindsym $tabKey+Return exec Vimb
 
 # assign graphic app to dedicated workspace
 assign [class="(pinta|Inkscpae)"] graphic
 for_window [class="(pinta|Inkscape)"] focus
-assign [class="Dwb"] web
-for_window [class="Dwb"] focus
-assign [class="Vimb"] web
-for_window [class="Vimb"] focus
-assign [class="Urxvt"] console
-for_window [class="Urxvt"] focus
+#assign [class="Vimb"] web
+#for_window [class="Vimb"] layout tabbed; focus
+#assign [class="Urxvt"] console
+#for_window [class="Urxvt"] layout splith; focus
+for_window [title="vimwiki_scratchpad"] move scratchpad; scratchpad show
+for_window [title="vimdiary_scratchpad"] move scratchpad; scratchpad show
+for_window [title="vimb_scratchpad"] move scratchpad; scratchpad show
 
 client.focused #859900 #859900 #eee8d5 #859900
 client.focused_inactive #073642 #073642 #586e75 #6c71c4
 client.unfocused #073642 #073642 #93a1a1 #586e75
 client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 
+# Enable/disable logging
+bindsym $mod+x shmlog toggle
+
+bindsym $tabKey+w exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex' ) -eq 2 ] && urxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex || i3-msg scratchpad show;
+bindsym $tabKey+i exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimdiary_scratchpad -e vim -c VimwikiDiaryIndex' ) -eq 2 ] && urxvt -title vimdiary_scratchpad -e vim -c VimwikiDiaryIndex || i3-msg scratchpad show;
+bindsym $tabKey+v exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimb_scratchpad -e vim ~/.config/vimb/config' ) -eq 2 ] && urxvt -title vimb_scratchpad -e vim ~/.config/vimb/config || i3-msg scratchpad show;
+exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
+#focus; move scratchpad; scratchpad show
