--- a/.config/i3/config
+++ b/.config/i3/config
@@ -183,7 +183,7 @@ bindsym $mod+o scratchpad show
 workspace_auto_back_and_forth yes
 
 #twitter
-for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
+#for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
 for_window [title="david_adsnovo - Skype*"] focus; move right; resize shrink left 20 px or 20 ppt; layout stacking;
 
 for_window [class="uvim"] border 1pixel
