--- a/.config/i3/config
+++ b/.config/i3/config
@@ -220,7 +220,7 @@ client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 
 set $Locker i3lock -i ~/.config/wallpaper/solarized-dark.png && sleep 1
 
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+set $mode_system System [l] lock, [e] logout, [s] suspend, [h] hibernate, [r] reboot, [Shift]+[s] shutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
