--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -14,11 +14,17 @@ nmap L <C-I>
 shortcut-add G=https://duckduckgo.com/html/?q=!gifl%20$0
 shortcut-add g=https://encrypted.google.com/#q=$0
 
+nmap ,;b :o ./.config/vimb/bookmark<CR>
 nmap ,,; ::sh! ~/share/bin/vimbmkpwd<CR>
 
 nmap ,,i ::e! instapaper()<CR>
 nmap ,,f ::e! facebook()<CR>
+nmap ,,a ::e! archive()<CR>::bma archive<CR>
+nmap ,;a ::e! getArchive()<CR>
 
 set proxy=true
 nmap ,,p :o http://config.privoxy.org/toggle<CR>
 
+aug bookmark
+	autocmd LoadFinished file:///*/bookmark e! bookmarkFileToHtml();
+aug end
