--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -1,17 +1,1 @@
-set hintkeys=sdfghjkl
-set caret=true
-set input-fg-normal=#839496
-set input-bg-normal=#002b36
-set status-ssl-color-fg=#002b36
-set status-ssl-color-bg=#839496
-set status-color-fg=#586e75
-set status-color-bg=#eee8d5
-set download-path=~/downloads/
-nn d :q<CR>
-nmap H <C-O>
-nmap L <C-I>
-shortcut-add G=https://duckduckgo.com/html/?q=!gifl%20$0
-shortcut-add g=https://encrypted.google.com/#q=$0
-set proxy=true
-nmap ,,i :e instapaper()<CR>
-nmap ,,p :o http://config.privoxy.org/toggle<CR>
+/home/david/share/vimb/config
