--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,6 +36,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'Meslo LG S DZ for Powerline-10' -h 24
+bindsym $mod+Shift+d exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'Meslo LG S DZ for Powerline-10' -h 24
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -68,6 +69,8 @@ bindsym $mod+Shift+l move right
 #bindsym $mod+Shift+Right move right
 
 # cycle throw workspace
+bindsym $mod+Tab workspace next
+bindsym $mod+Shift+Tab workspace prev
 bindsym $mod+Shift+Left workspace prev
 bindsym $mod+Shift+Right workspace next
 
@@ -106,7 +109,7 @@ bindsym $mod+5 workspace 5:mail-Perso; layout tabbed; exec [ $( ps -eo cmd | gre
 bindsym $mod+6 workspace 6:mail-JIT; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttjit -e mutt' ) -eq 2 ] && urxvt -title muttjit -e mutt -e "source ~/.mutt/jobintree.com"
 bindsym $mod+7 workspace 7:tmux-weechat; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
 bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9:reddit; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title reddit' ) -eq 2 ] && urxvt -title reddit -e rtv
+bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
@@ -118,7 +121,7 @@ bindsym $mod+Shift+5 move container to workspace 5:mail-Perso
 bindsym $mod+Shift+6 move container to workspace 6:mail-JIT
 bindsym $mod+Shift+7 move container to workspace 7:tmux-weechat
 bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9:reddit
+bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
@@ -220,6 +223,21 @@ client.unfocused #073642 #073642 #93a1a1 #586e75
 client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 
 set $Locker i3lock -i ~/.config/wallpaper/solarized-dark.png && sleep 1
+
+# Press $mod+o followed by either f, t, Esc or Return to launch firefox,
+# thunderbird or return to the default mode, respectively.
+set $mode_launcher Launch: [f]irefox [c]hrome [r]emmina [w]riter
+bindsym $mod+p mode "$mode_launcher"
+
+mode "$mode_launcher" {
+    bindsym f exec firefox
+    bindsym c exec google-chrome-stable
+    bindsym r exec remmina
+    bindsym w exec writer
+
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
 
 set $mode_system System [l] lock, [e] logout, [s] suspend, [h] hibernate, [r] reboot, [Shift]+[s] shutdown
 mode "$mode_system" {
