i3 add some fancy icon, refactoring

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,7 +23,7 @@ set $tabKey Mode_switch
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
 #font pango:DejaVu Sans Mono 10
-font pango:Meslo LG S DZ for Powerline 10
+font pango:Meslo LG S DZ for Powerline, icons, FontAwesome, Devicons, 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -97,29 +97,44 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+# sticky window
+bindsym $mod+Shift+s sticky toggle
 # focus the child container
 #bindsym $mod+d focus child
 
+#icon
+set $vimIcon 
+
+#menu title
+set $menu1 1:console
+set $menu2 2:web
+set $menu3 3:<span font="devicons"></span>
+set $menu4 4:<span>mail-gmail</span>
+set $menu5 5:<span>mail-perso</span>
+set $menu6 6:<span>mail-JIT</span>
+set $menu7 7:tmux-weechat
+
+
 # switch to workspace
-bindsym $mod+1 workspace 1:console; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
-bindsym $mod+2 workspace 2:web; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb -s
-bindsym $mod+3 workspace 3:vim; layout splith; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title uvim -e vim' ) -eq 2 ] && urxvt -title uvim -e vim
-bindsym $mod+4 workspace 4:mail-gmail; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttgmail -e mutt' ) -eq 2 ] && urxvt -title muttgmail -e mutt -e "source ~/.mutt/gmail.com"
-bindsym $mod+5 workspace 5:mail-Perso; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttperso -e mutt' ) -eq 2 ] && urxvt -title muttperso -e mutt -e "source ~/.mutt/newmanity.com"
-bindsym $mod+6 workspace 6:mail-JIT; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttjit -e mutt' ) -eq 2 ] && urxvt -title muttjit -e mutt -e "source ~/.mutt/jobintree.com"
-bindsym $mod+7 workspace 7:tmux-weechat; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
+bindsym $mod+1 workspace $menu1; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
+bindsym $mod+2 workspace $menu2; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb -s
+bindsym $mod+3 workspace $menu3; layout splith; exec [ $( ps -eo cmd | grep -c '[t]ermite --title uvim -e vim' ) -eq 2 ] && termite --title uvim -e vim
+bindsym $mod+4 workspace $menu4; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttgmail -e mutt' ) -eq 2 ] && urxvt -title muttgmail -e mutt -e "source ~/.mutt/gmail.com"
+bindsym $mod+5 workspace $menu5; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttperso -e mutt' ) -eq 2 ] && urxvt -title muttperso -e mutt -e "source ~/.mutt/newmanity.com"
+bindsym $mod+6 workspace $menu6; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttjit -e mutt' ) -eq 2 ] && urxvt -title muttjit -e mutt -e "source ~/.mutt/jobintree.com"
+bindsym $mod+7 workspace $menu7; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1:console
-bindsym $mod+Shift+2 move container to workspace 2:web
-bindsym $mod+Shift+3 move container to workspace 3:vim
-bindsym $mod+Shift+4 move container to workspace 4:mail-Gmail
-bindsym $mod+Shift+5 move container to workspace 5:mail-Perso
-bindsym $mod+Shift+6 move container to workspace 6:mail-JIT
-bindsym $mod+Shift+7 move container to workspace 7:tmux-weechat
+bindsym $mod+Shift+1 move container to workspace $menu1
+bindsym $mod+Shift+2 move container to workspace $menu2
+bindsym $mod+Shift+3 move container to workspace $menu3
+bindsym $mod+Shift+4 move container to workspace $menu4
+bindsym $mod+Shift+5 move container to workspace $menu5
+bindsym $mod+Shift+6 move container to workspace $menu6
+bindsym $mod+Shift+7 move container to workspace $menu7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
@@ -158,14 +173,14 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 set $sink `pactl list short sinks | grep RUNNING | head -1 | cut -f1`
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $sink +10%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $sink -10%
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $sink +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $sink -5%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $sink toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  font pango:Meslo LG S DZ for Powerline, icons, FontAwesome, 10
+  font pango:Meslo LG S DZ for Powerline, Icons, FontAwesome, 10
   status_command python ~/.config/i3/status.py
 	position top
   colors {
@@ -182,9 +197,6 @@ bar {
 
 hide_edge_borders both
 
-#floating window
-bindsym $mod+t floating toggle
-
 #scratchpad
 bindsym $mod+m move scratchpad
 bindsym $mod+o scratchpad show
@@ -192,11 +204,16 @@ bindsym $mod+o scratchpad show
 #automatic back-and-forth switch workspace
 workspace_auto_back_and_forth yes
 
+# Set variables for floating and un-floating commands
+set $FLOAT floating enable, border normal 0
+set $UNFLOAT floating disable, border normal 2
+
 #twitter
 #for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
-for_window [title="david_adsnovo - Skype*"] focus; move right; resize shrink left 20 px or 20 ppt; layout stacking;
+for_window [title="david_adsnovo - Skype*"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout split;
 
-for_window [class="uvim"] border 1pixel
+#for_window [title="vim"] title_format "<span font='devicons'> </span>%title"
+for_window [title="uvim"] border 1pixel
 for_window [class="URxvt"] border 1pixel
 for_window [class="Vimb"] border 1pixel
 #for_window [class="Vimb"] border 1pixel
@@ -212,10 +229,7 @@ for_window [class="(pinta|Inkscape)"] focus
 #for_window [class="Vimb"] layout tabbed; focus
 #assign [class="Urxvt"] console
 #for_window [class="Urxvt"] layout splith; focus
-for_window [title="vimwiki_scratchpad"] move scratchpad; scratchpad show
-for_window [title="vimdiary_scratchpad"] move scratchpad; scratchpad show
-for_window [title="vimb_scratchpad"] move scratchpad; scratchpad show
-for_window [title="preview_scratchpad"] move scratchpad; scratchpad show
+for_window [title="scratchpad_*"] move scratchpad; scratchpad show; border 1pixel;
 
 client.focused #859900 #859900 #eee8d5 #859900
 client.focused_inactive #073642 #073642 #586e75 #6c71c4
@@ -230,10 +244,10 @@ set $mode_launcher Launch: [f]irefox [c]hrome [r]emmina [w]riter
 bindsym $mod+p mode "$mode_launcher"
 
 mode "$mode_launcher" {
-    bindsym f exec firefox
-    bindsym c exec google-chrome-stable
-    bindsym r exec remmina
-    bindsym w exec writer
+    bindsym f exec firefox, mode "default"
+    bindsym c exec google-chrome-stable, mode "default"
+    bindsym r exec remmina, mode "default"
+    bindsym w exec writer, mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -258,8 +272,10 @@ bindsym Pause mode "$mode_system"
 # Enable/disable logging
 bindsym $mod+x shmlog toggle
 
-bindsym $tabKey+w exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex' ) -eq 2 ] && urxvt -title vimwiki_scratchpad -e vim -c VimwikiIndex || i3-msg scratchpad show;
-bindsym $tabKey+i exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimdiary_scratchpad -e vim -c VimwikiDiaryIndex' ) -eq 2 ] && urxvt -title vimdiary_scratchpad -e vim -c VimwikiDiaryIndex || i3-msg scratchpad show;
-bindsym $tabKey+v exec [ $( ps -eo cmd | grep -c '[u]rxvt -title vimb_scratchpad -e vim ~/.config/vimb/config' ) -eq 2 ] && urxvt -title vimb_scratchpad -e vim ~/.config/vimb/config || i3-msg scratchpad show;
+bindsym $tabKey+w exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimwiki' ) -eq 2 ] && termite --title scratchpad_vimwiki -e 'vim -c VimwikiIndex' || i3-msg scratchpad show, sticky enable;
+bindsym $tabKey+i exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimdiary' ) -eq 2 ] && termite --title scratchpad_vimdiary -e 'vim -c VimwikiDiaryIndex' || i3-msg scratchpad show, sticky enable;
+bindsym $tabKey+v exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimb' ) -eq 2 ] && termite --title scratchpad_vimb -e 'vim ~/.config/vimb/config' || i3-msg scratchpad show, sticky enable;
 exec [ $( ps -eo cmd | grep -c '[u]rxvt -title console' ) -eq 2 ] && urxvt -title console
 #focus; move scratchpad; scratchpad show
+
+exec_always compton -f
