--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -6,6 +6,6 @@ GeometryX=0
 GeometryY=0
 GeometryWidth=840
 GeometryHeight=630
-SortColumn=name
+SortColumn=modified
 SortOrder=descending
 StartupMode=recent
